# Parallel-Point-in-Polygon-Classification-for-Large-Scale-Geospatial-Data

./: .gitignore  CMakeLists.txt  DELIVERABLES.md  FINAL_PROJECT_REPORT.md  Github.txt  PDC_presentation.pptx  PROJECT_REPORT.md  README.md  RUN_INSTRUCTIONS.md  SUMMARY.md  WORK_REPORT.md  Week1_completion.md  Week2_completion.md  Week3_completion.md  bench_m1_live.txt  bench_m2_live.txt  bench_m3_live.txt  benchmark.txt  benchmark_final_radix.txt  build.bat  build.ps1  build.sh  milestone_1.txt  milestone_2.txt  milestone_3.txt  output_strip_index_clean.txt  parallel-point-in-polygon (1).md  parallel-point-in-polygon.md  update_pptx.py
docs/: M2_ROADMAP.md  PROJECT_ORGANIZATION.md  QUICKSTART.md
include/distributed/: mpi_classifier.hpp  mpi_types.hpp  spatial_partitioner.hpp
include/generator/: distribution.hpp  polygon_loader.hpp
include/geometry/: point.hpp  polygon.hpp  ray_casting.hpp
include/index/: bbox_filter.hpp  geojson_loader.hpp  quadtree.hpp  strip_index.hpp
include/ipc/: ipc.hpp
include/parallel/: parallel_classifier.hpp  work_stealing_classifier.hpp
src/: benchmark_m1.cpp  benchmark_m2.cpp  benchmark_m3.cpp  worker_main.cpp
src/distributed/: mpi_classifier.cpp  mpi_types.cpp  spatial_partitioner.cpp
src/generator/: clustered_distribution.cpp  polygon_loader.cpp  uniform_distribution.cpp
src/geometry/: point.cpp  polygon.cpp  ray_casting.cpp
src/index/: bbox_filter.cpp  geojson_loader.cpp  quadtree.cpp  strip_index.cpp
src/parallel/: parallel_classifier.cpp  work_stealing_classifier.cpp
tests/: test_mpi_classifier.cpp  test_ray_casting.cpp
